--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: "3.9"
 services:
   backend:
     build: ./be
-    container_name: django_backend_user_db
+    container_name: django_backend_jeongneung-survey
     command: gunicorn config.wsgi:application --bind 0.0.0.0:8000
     env_file:
       - ./be/.env
